# Dumpy

./: README.md
dumpy/: .gitignore  Cargo.toml
dumpy/.cargo/: config
dumpy/bindings/: Cargo.toml  build.rs
dumpy/data/: Cargo.toml
dumpy/data/src/: lib.rs
dumpy/dinvoke/: Cargo.toml
dumpy/dinvoke/src/: lib.rs
dumpy/dumper/: Cargo.toml
dumpy/dumper/src/: lib.rs
dumpy/src/: main.rs
