[package]
name = "dumpy"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package.dumpy]
opt-level = 2
debug = 0

# From https://stackoverflow.com/questions/29008127/why-are-rust-executables-so-huge
[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true   

[dependencies]
dumper = { path = "dumper"}
litcrypt = "0.3"
clap = { version = "3.1.6", features = ["derive"] }

[build-dependencies]
static_vcruntime = "2.0"