[package]
name = "dumpy"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package.dumpy]
opt-level = 2
debug = 0

[profile.dev]
debug-assertions = false

[profile.release]
debug-assertions = false 
strip = true   

[dependencies]
dumper = { path = "dumper"}
litcrypt2 = "0.1.2"
getopts = "0.2"

[build-dependencies]
static_vcruntime = "2.0"
