[package]
name = "dumper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package.dumper]
opt-level = 3
debug = 0

[dependencies]
bindings = { path = "../bindings" }
data = { path = "../data" }
dinvoke = { path = "../dinvoke" }
litcrypt = "0.3"
ureq = "*"
rand = "0.8.4"