[package]
name = "dumper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package.dumper]
opt-level = 2
debug = 0

[dependencies]
bindings = { path = "../bindings" }
data = { path = "../data" }
dinvoke = { path = "../dinvoke" }
litcrypt2 = "0.1.2"
ureq = "*"
rand = "0.8.4"
base64 = "*"
ntapi = "0.4"
